Conserto de bugs na lógica da árvore e criação de arquivos .txt com as artes ASCII para melhor organização do código.